--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_feather_icons: ^2.0.0+1
   line_icons: ^2.0.1
+  window_size:
+    git:
+      url: https://github.com/google/flutter-desktop-embedding.git
+      path: plugins/window_size
+  provider: ^6.0.4
+  top_snackbar_flutter: ^2.1.1
 
 dev_dependencies:
   flutter_test:
